--- a/demo.ipynb
+++ b/demo.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from constrain.prompt.builder import PromptBuilder  # Prompt builder"
+    "from parsechain.prompt.builder import PromptBuilder  # Prompt builder"
    ]
   },
   {
@@ -92,10 +92,10 @@
     "You can using PromptBuilder to make your own prompt templates. Otherwise, you can just pass in your prompt as a string and `constrain` does the needful. \n",
     "\n",
     "If using PromptBuilder, you will add sections within your prompt. Each section takes these attributes: \n",
-    "- text: Fixed text. Can have placeholders, but needs to be specified with `placeholder`\n",
-    "- placeholder: `placeholder` in `text`\n",
-    "- define_grammar: Can be used only once in the prompt. Defines the section where grammar will be explained \n",
-    "- add_few_shot_examples: Adds a filled up Pydantic model to the prompt aligning with the grammar format"
+    "- text: str, Fixed text; Can have placeholders, but needs to be specified with `placeholder` attribute.\n",
+    "- placeholder: str, Exact `placeholder` identifiers in `text`.\n",
+    "- define_grammar: True/False, Can be used only once in the template. Defines the section where grammar will be explained.\n",
+    "- add_few_shot_examples: True/False, Adds a filled-up Pydantic model to the prompt aligning with the grammar format."
    ]
   },
   {
@@ -110,7 +110,7 @@
     "llama_prompt.add_section(\n",
     "    text=\"<s>[INST] <<SYS>>\\n{system_context}\\n<</SYS>>\",\n",
     "    placeholder=\"system_context\",\n",
-    "    define_grammar=True\n",
+    "    define_grammar=True,\n",
     ")\n",
     "llama_prompt.add_section(\n",
     "    text=\"{user_message}[/INST]\",\n",
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from constrain.constrain import Constrain  # Main class"
+    "from parsechain.constrain import Constrain  # Main class"
    ]
   },
   {
@@ -163,11 +163,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_message = \"\" \n",
-    "system_context = \"\" \n",
+    "user_message = \"\"\n",
+    "system_context = \"\"\n",
+    "\n",
     "\n",
     "class Model(BaseModel):\n",
-    "    model_name: str \n",
+    "    model_name: str\n",
+    "\n",
     "\n",
     "with Constrain(llama_prompt) as manager:\n",
     "    manager.set_config(\n",
@@ -179,7 +181,7 @@
     "                          'system_context': system_context},\n",
     "                          grammars=[{\n",
     "                              'model': [Model]},\n",
-    "                            ]\n",
+    "    ]\n",
     "    )\n",
     "\n",
     "    prompt = manager.prompt"
@@ -241,6 +243,7 @@
     "# Here's a simple example of asking an LLM to make code.\n",
     "# This can be used within coding assistants which requires extra metadata.\n",
     "\n",
+    "\n",
     "class FunctionModel(BaseModel):\n",
     "    function_name: str\n",
     "    docstring: str\n",
@@ -253,18 +256,10 @@
     "input_str = \"I want to create a function that returns the fibonacci sequence. The function should be called 'fib'. The function can use numpy.\"\n",
     "\n",
     "with Constrain(input_str) as manager:\n",
-    "    manager.set_config(\n",
-    "        format='xml',\n",
-    "        return_sequence='single_response'\n",
-    "    )\n",
+    "    manager.set_config(format=\"xml\", return_sequence=\"single_response\")\n",
     "\n",
     "    manager.format_prompt(\n",
-    "        grammars=[\n",
-    "            {\n",
-    "                'description': 'No Code Generation',\n",
-    "                'model': FunctionModel\n",
-    "            }\n",
-    "        ]\n",
+    "        grammars=[{\"description\": \"No Code Generation\", \"model\": FunctionModel}]\n",
     "    )\n",
     "\n",
     "    prompt = manager.prompt\n",
@@ -292,7 +287,7 @@
     }
    ],
    "source": [
-    "# The response will be of `Response` type, which can be used to extract the data. If adding the parsed response to this object fails, it will return the dict itself. \n",
+    "# The response will be of `Response` type, which can be used to extract the data. If adding the parsed response to this object fails, it will return the dict itself.\n",
     "print(response.FunctionModel.is_python)"
    ]
   },
@@ -339,7 +334,7 @@
     }
    ],
    "source": [
-    "# Add some examples too! \n",
+    "# Add some examples too!\n",
     "\n",
     "Sum_Function_Model = FunctionModel(\n",
     "    function_name=\"sum\",\n",
@@ -347,7 +342,7 @@
     "    depedencies=[\"numpy\"],\n",
     "    uuid=123456789,\n",
     "    is_python=True,\n",
-    "    code=\"def sum(a, b):\\n\\treturn a + b\" \n",
+    "    code=\"def sum(a, b):\\n\\treturn a + b\"\n",
     ")\n",
     "\n",
     "\n",
@@ -365,15 +360,14 @@
     "            }\n",
     "        ],\n",
     "        examples=[\n",
-    "            { \n",
-    "              'query': \"Create a summation function in Python\", \n",
-    "              'model': Sum_Function_Model\n",
+    "            {\n",
+    "                'query': \"Create a summation function in Python\",\n",
+    "                'model': Sum_Function_Model\n",
     "            }\n",
     "        ]\n",
     "    )\n",
     "\n",
     "    prompt = manager.prompt\n",
-    "    \n",
     "\n",
     "    llm_response = llm.request(prompt, temperature=0.01)\n",
     "    log(llm_response)\n",
@@ -437,6 +431,7 @@
     "    thought_id: Optional[str] = Field(\n",
     "        None, description=\"The unique identifier for the thought\")\n",
     "\n",
+    "\n",
     "system_context = \"\"\"Your goal is to think and plan out how to solve questions using agent tools provided to you. Think about all aspects of your thought process.\"\"\"\n",
     "user_message = \"\"\"Who is Vladmir Putin?\"\"\"\n",
     "\n",
@@ -446,7 +441,6 @@
     "        return_sequence='single_response'\n",
     "    )\n",
     "\n",
-    "\n",
     "    manager.format_prompt(placeholders={\n",
     "                          'user_message': user_message,\n",
     "                          'system_context': system_context\n",
@@ -454,7 +448,7 @@
     "                          grammars=[{\n",
     "                              'description': 'This format describes your current thinking state',\n",
     "                              'model': [ThoughtState]},\n",
-    "                            ]\n",
+    "    ]\n",
     "    )\n",
     "\n",
     "    prompt = manager.prompt\n",
@@ -664,7 +658,6 @@
     "    )\n",
     "\n",
     "    prompt = manager.prompt\n",
-    "    \n",
     "\n",
     "    llm_response = llm.request(prompt, temperature=0.01)\n",
     "    log(llm_response)\n",
@@ -840,7 +833,6 @@
     "    )\n",
     "\n",
     "    prompt = manager.prompt\n",
-    "    \n",
     "\n",
     "    llm_response = llm.request(prompt, temperature=0.01)\n",
     "    log(llm_response)\n",
@@ -873,7 +865,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from constrain.grammars.gnbf import GNBF"
+    "from parsechain.grammars.gnbf import GNBF"
    ]
   },
   {
