--- a/gnbf.ipynb
+++ b/gnbf.ipynb
@@ -12,8 +12,36 @@
     "import os\n",
     "import re\n",
     "\n",
-    "os.environ[\"PYTHONPATH\"] = \"/home/aksha/Workbench/Research/Labs/e-lab/parser/constrain\""
+    "os.environ[\"PYTHONPATH\"] = \"/home/aksha/Workbench/Research/Labs/e-lab/parser/parsechain\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from parsechain import Response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'GNBF' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mGNBF\u001b[49m()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'GNBF' is not defined"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -21,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from constrain.grammars.gnbf import GNBF"
+    "from parsechain.grammars.gnbf import GNBF"
    ]
   },
   {
@@ -1307,7 +1335,8 @@
     "print(\n",
     "    \"DialoGPT: {}\".format(\n",
     "        tokenizer.decode(\n",
-    "            chat_history_ids[:, bot_input_ids.shape[-1] :][0], skip_special_tokens=True\n",
+    "            chat_history_ids[:, bot_input_ids.shape[-1]\n",
+    "                :][0], skip_special_tokens=True\n",
     "        )\n",
     "    )\n",
     ")"
