--- a/samples/demo.ipynb
+++ b/samples/demo.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -15,12 +15,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 16,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 16,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "os.environ[\"PYTHONPATH\"] = \"/home/aksha/Workbench/Research/Labs/e-lab/parser/constrain\"\n",
-        "os.environ[\"OPENAI_API_KEY\"] = \"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\""
+        "from dotenv import load_dotenv, find_dotenv\n",
+        "\n",
+        "load_dotenv(find_dotenv())"
       ]
     },
     {
@@ -32,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -60,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -78,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -100,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -109,12 +121,12 @@
         "llama_prompt = PromptBuilder()\n",
         "llama_prompt.add_section(\n",
         "    text=\"<s>[INST] <<SYS>>\\n{system_context}\\n<</SYS>>\",\n",
-        "    placeholder=\"system_context\",\n",
+        "    placeholders=\"system_context\",\n",
         "    define_grammar=True,\n",
         ")\n",
         "llama_prompt.add_section(\n",
         "    text=\"{user_message}[/INST]\",\n",
-        "    placeholder=\"user_message\",\n",
+        "    placeholders=\"user_message\",\n",
         ")"
       ]
     },
@@ -127,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -159,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -196,7 +208,156 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def check_previous_interaction(id_): return id_ > 1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "class Step(BaseModel):\n",
+        "    thought: str = Field(..., description=\"This should concisely explain what you want to know for your goal.\")\n",
+        "    action: str = Field(..., description=\"Your options: \\\n",
+        "'load_md_file' (Provide the name of the file you want to load. Eg: 'README.md') | 'get_link_from_filename' (Provide the name (can be incomplete) of the file, and get it's link).\")\n",
+        "    action_input: str = Field(..., description=\"The input for the action you want to take. Eg: 'README.md' | 'readme'\")\n",
+        "    \n",
+        "prompt = PromptBuilder() \n",
+        "prompt.add_section(\n",
+        "  text=\"Your role is that of a {role}. In this ongoing conversation, your goal is to {goal}.\\nYour final result should contain {deliverables}.\", \n",
+        "  placeholders=[\"role\", \"goal\", \"deliverables\"]\n",
+        ")\n",
+        "prompt.add_section(\n",
+        "  define_grammar=True\n",
+        ") \n",
+        "prompt.add_section(\n",
+        "  text=\"\\nIn our previous interaction, you wanted to {thought} using {action}. You observed: {observation}.\",\n",
+        "  placeholders=[\"thought\", \"action\", \"observation\"], \n",
+        "  enable_on=check_previous_interaction\n",
+        ")\n",
+        "prompt.add_section(\n",
+        "  text=\"Create the next Step in the conversation. Think through your reasoning and the action you want to take. Ensure that you are progressing towards your goal.\",\n",
+        "  enable_on=check_previous_interaction\n",
+        ")\n",
+        "prompt.add_section(\n",
+        "  text=\"Below is the history of the conversation so far.\\n{hsitory}\\n\",\n",
+        "  placeholders=[\"history\"],\n",
+        "  enable_on=check_previous_interaction\n",
+        ") "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "role = \"software developer trying to reproduce a codebase\"\n",
+        "goal = \"create a roadmap to set up the environment a github repository\"\n",
+        "deliverables = \"the links to the files needed in each step of your roadmap, and the code for each step\"\n",
+        "thought = None \n",
+        "action = None\n",
+        "observation = None\n",
+        "history = None\n",
+        "\n",
+        "id_ = 0"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Your role is that of a software developer trying to reproduce a codebase. In this ongoing conversation, your goal is to create a roadmap to set up the environment a github repository.\n",
+            "Your final result should contain the links to the files needed in each step of your roadmap, and the code for each step.\n",
+            "\n",
+            "Here is the XML output format you are expected to return your response in.\n",
+            "\n",
+            "Your thinking state\n",
+            "```\n",
+            "<Step>\n",
+            "<thought> #string# </thought> # This should concisely explain what you want to know for your goal.\n",
+            "<action> #string# </action> # Your options: 'load_md_file' (Provide the name of the file you want to load. Eg: 'README.md') | 'get_link_from_filename' (Provide the name (can be incomplete) of the file, and get it's link).\n",
+            "<action_input> #string# </action_input> # The input for the action you want to take. Eg: 'README.md' | 'readme'\n",
+            "</Step>\n",
+            "\n",
+            "```\n",
+            "\n",
+            "RETURN ONLY ONE OF <Step>. DO NOT FORGET TO COVER YOUR OUTPUTS WITH '```'.\n"
+          ]
+        }
+      ],
+      "source": [
+        "with Constrain(prompt) as manager: \n",
+        "  manager.set_config(\n",
+        "    format='xml'\n",
+        "  ) \n",
+        "  manager.format_prompt(\n",
+        "    placeholders={ \n",
+        "      \"role\": role, \n",
+        "      \"goal\": goal, \n",
+        "      \"deliverables\": deliverables,\n",
+        "      \"thought\": thought, \n",
+        "      \"action\": action,\n",
+        "      \"observation\": observation,\n",
+        "      \"history\": history\n",
+        "    }, \n",
+        "    grammars=[{\n",
+        "      'description': 'Your thinking state', \n",
+        "      'model': Step\n",
+        "    }], \n",
+        "    enable_on={\n",
+        "      'id_':id_ \n",
+        "    }\n",
+        "  ) \n",
+        "  \n",
+        "  print(manager.prompt)\n",
+        "  # resp = llm(manager.prompt, temperature=0.01)\n",
+        "\n",
+        "  # thought = response.Step.thought \n",
+        "  # action = response.Step.action\n",
+        "  # action_input = response.Step.action_input\n",
+        "\n",
+        "  # if action == \"load_md_file\":  \n",
+        "  #   git.find_files(action_input)\n",
+        "  # elif action == \"get_link_from_filename\":\n",
+        "  #   git.find_files(action_input)\n",
+        "  #   git.get_file_url(action_input)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "Exception",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[27], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m()\n",
+            "\u001b[0;31mException\u001b[0m: "
+          ]
+        }
+      ],
+      "source": [
+        "raise Exception()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -275,7 +436,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -293,7 +454,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -380,7 +541,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -464,7 +625,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -482,7 +643,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -670,7 +831,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -727,7 +888,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -861,7 +1022,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -870,7 +1031,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -879,7 +1040,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -912,7 +1073,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
