--- a/samples/hotpotqa/hotpotqa_modified.ipynb
+++ b/samples/hotpotqa/hotpotqa_modified.ipynb
@@ -64,6 +64,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Using GrammarFlow\n",
+    "\n",
+    "> HotpotQA is a question answering dataset featuring natural, multi-hop questions, with strong supervision for supporting facts to enable more explainable question answering systems.\n",
+    "\n",
+    "[ReAct](https://github.com/ysymyth/ReAct) adds a bunch of useful helper functions to their evaluation code for prompting against this dataset. This sample directory cleans up their code and adds GrammarFlow to it. \n",
+    "\n",
+    "All we need to do is: \n",
+    "1. Create a Step model to constrain our thinking state\n",
+    "2. Create a Prompt for our ReAct flow. Our `make_prompt()` function takes care of it. \n",
+    "3. Within the original `webthink()` function, we make changes along the lines of: \n",
+    "  - Tracking and logging all steps between iterations\n",
+    "  - Use `Constrain()` from GrammarFlow to make the extraction of 'Thought', 'Action' and 'Action_Input' pythonic and error-prone. \n",
+    "\n",
+    "Note: Remember that prompts are stateful, and thus need to be discarded after every `Constrain()` block. That's why we use `make_prompt()`\n",
+    "\n",
+    "Our goal was to show that we can easily infuse existing prompting code with GrammarFlow! "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -162,6 +184,7 @@
     "    if history:\n",
     "      history_ = \"\\n\".join([f\"Thought {id_}: {value['thought']}\\nAction {id_}: {value['action']}\\nAction_Input {id_}: {value['action_input']}\\nObservation {id_}: {value['observation']}\" for id_, value in history.items()])\n",
     "\n",
+    "    # The only major change we've made! \n",
     "    with Constrain(make_prompt()) as manager: \n",
     "      manager.set_config(\n",
     "        format='xml'\n",
@@ -193,6 +216,7 @@
     "    observation, r, done, info = step(env, f\"{action}[{action_input}]\")\n",
     "    observation = observation.replace(\"\\\\n\", \" \")\n",
     "\n",
+    "    # Logging statements \n",
     "    log('--------------------------')\n",
     "    log('---------------')\n",
     "    log('Prompt:', manager.prompt)\n",
