--- a/samples/demo.ipynb
+++ b/samples/demo.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -24,7 +24,7 @@
               "True"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -139,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -171,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -208,7 +208,180 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "class Annotations(BaseModel): \n",
+        "    materials: List[str] = Field(..., description=\"ADD SOMETHING\")\n",
+        "    conditions: List[str]= Field(..., description=\"ADD SOMETHING\")\n",
+        "    parameters: List[str]= Field(..., description=\"ADD SOMETHING\")\n",
+        "    processes: List[str]= Field(..., description=\"ADD SOMETHING\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "prompt = PromptBuilder() \n",
+        "prompt.add_section(\n",
+        "  text=\"\"\"\n",
+        "Your role is that of a DATA ANNOTATOR for research paper abstracts. You are expected to identify the materials used, different processes involved (such as types of chromatography, purification, methods, preparation, study, etc), and conditions (temperature units, quantity units, mathematical units, percentages, coefficients, any numbers) and any parameters- like factor names, rate, yield, etc mentioned in the abstract. \n",
+        "\n",
+        "I want you to look at the abstract given below and return all the key phrases you find. \n",
+        "  \"\"\"\n",
+        ") \n",
+        "prompt.add_section(\n",
+        "  define_grammar = True\n",
+        ")\n",
+        "prompt.add_section(\n",
+        "  text=\"\"\"\n",
+        "Here is an example: \n",
+        "\n",
+        "Abstract: Of the three particle sizes studied (10µm, 20µm, 50µm) only 10µm silica resin was able to produce purified API at the yield (>96%) and productivity (> 1kg/kg-resin/day) necessitated by the project. The second case study uses DoE studies to identify critical process parameters of column load, mobile phase solvent ratio and basic modifier level for a low-resolution, preparative, chiral separation.\n",
+        "Annotations: \n",
+        "```xml\n",
+        "<materials>['silica resin'] </materials>\n",
+        "<conditions>['10µm, 20µm, 50µm',  'only 10µm silica resin, ' yield (>96%)', 'productivity (> 1kg/kg-resin/day)',]</conditions> \n",
+        "<parameters>[ ' column load', 'mobile phase solvent ratio']</parameters>\n",
+        "<processes>[ 'chiral separation']</processes>\n",
+        "```\n",
+        "\n",
+        "Every str object within the list you return for each of the tags must contain at least 2 words and not exceed 8 words. Remember that your role is to automate the data annotation process for  a chemistry based project. \n",
+        "\n",
+        "Begin!\n",
+        "\"\"\"\n",
+        ")\n",
+        "prompt.add_section(\n",
+        "  text=\"Abstract: {abstract}\\nAnnotations:\", \n",
+        "  placeholders=[\"abstract\"]\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "abstract = \"\"\" The simultaneous determination of multi-mycotoxins in food commodities are highly desirable due to their potential toxic effects and mass consumption of foods. Herein, liquid chromatography-quadrupole exactive orbitrap mass spectrometry was proposed to analyze multi-mycotoxins in commercial vegetable oils. Specifically, the method featured a successive liquid–liquid extraction process, in which the complementary solvents consisted of acetonitrile and water were optimized. Resultantly, matrix effects were reduced greatly. External calibration approach revealed good quantification property for each analyte. Under optimal conditions, the recovery ranging from 80.8% to 109.7%, relative standard deviation less than 11.7%, and good limit of quantification (0.35 to 45.4ng/g) were achieved. The high accuracy of proposed method was also validated. The detection of 20 commercial vegetable oils revealed that aflatoxins B1 and B2, zearalenone were observed in 10 real samples. The as-developed method is simple and low-cost, which merits the wide applications for scanning mycotoxins in oil matrices.\"\"\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "with Constrain(prompt) as manager:\n",
+        "    manager.set_config(\n",
+        "        format='xml',\n",
+        "        return_sequence='single_response'\n",
+        "    )\n",
+        "\n",
+        "    manager.format_prompt(placeholders={\n",
+        "        \"abstract\": abstract}, \n",
+        "                          grammars=[{\n",
+        "                              'model': [Annotations]},\n",
+        "    ]\n",
+        "    )\n",
+        "\n",
+        "    prompt = manager.prompt\n",
+        "    llm_response = llm.request(prompt)\n",
+        "    response = manager.parse(llm_response)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{\n",
+            "    \"Annotations\": {\n",
+            "        \"materials\": \"['commercial vegetable oils', 'acetonitrile', 'water']\",\n",
+            "        \"conditions\": \"['liquid chromatography-quadrupole exactive orbitrap mass spectrometry', 'successive liquid\\u2013liquid extraction process', 'acetonitrile and water were optimized', 'under optimal conditions', 'good limit of quantification (0.35 to 45.4ng/g)']\",\n",
+            "        \"parameters\": \"['recovery ranging', 'relative standard deviation', 'limit of quantification']\",\n",
+            "        \"processes\": \"['liquid chromatography-quadrupole exactive orbitrap mass spectrometry', 'liquid\\u2013liquid extraction process', 'external calibration approach']\"\n",
+            "    }\n",
+            "}\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(response)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "\"['liquid chromatography-quadrupole exactive orbitrap mass spectrometry', 'successive liquid–liquid extraction process', 'acetonitrile and water were optimized', 'under optimal conditions', 'good limit of quantification (0.35 to 45.4ng/g)']\""
+            ]
+          },
+          "execution_count": 16,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "response.Annotations.conditions"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "ValueError",
+          "evalue": "Stop here",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStop here\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+            "\u001b[0;31mValueError\u001b[0m: Stop here"
+          ]
+        }
+      ],
+      "source": [
+        "raise ValueError(\"Stop here\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -217,7 +390,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -253,7 +426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -270,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -336,7 +509,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
